--- a/03.html
+++ b/03.html
@@ -27,7 +27,7 @@
 
  <a href="index.html">酥皮蘋果派</a>
  <a href="02.html">海鮮披薩</a>
- <a href="04.html">鹽水雞</a>
+ <a href="04.html">魷魚羹</a>
  <a href="05.html">心得</a>
 <audio src="media/002.mp3"controls /> 
  
