--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
-﻿<html>
 
-<head>
-
-<title>壽司</title>
-
-</head>
-
-<body bgcolor="#cccccc">
-
-<body>
 
 
 <h1><html>
 
 <head>
 
-<title>鹽水雞</title>
+<title>酥皮蘋果派</title>
 
 </head>
 
