--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-
-
-
-<h1>酥皮蘋果派<html>
+<html>
 
 <head>
 
 <title>酥皮蘋果派</title>
+
+</head>
+
+<body bgcolor="#cccccc">
+
+<body>
+<html>
+
+<head>
+
+<title>吐司披薩（玉米鮪魚）</title>
 
 </head>
 
